--- a/telacadastro1.html
+++ b/telacadastro1.html
@@ -78,7 +78,7 @@ formSenha.addEventListener('submit', async (event) => {
 
   if (responsePatch.ok) {
     alert('Senha cadastrada com sucesso!');
-    window.location.href = 'index1.html';
+    window.location.href = 'index.html';
   } else {
     alert('Ocorreu um erro ao salvar a senha.');
   }
