mudanças na rota

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
      <script>
   const form = document.querySelector('#loginForm');
-  const url = 'http://localhost:3000/usuarios';
+  const url = 'https://projeto-wexer.onrender.com/usuarios';
   
   form.addEventListener('submit', async (event) => {
     event.preventDefault();
