--- a/telacadastro.html
+++ b/telacadastro.html
@@ -39,7 +39,7 @@
         const name = document.getElementById('name').value;
         const email = document.getElementById('exampleInputEmail').value;
         const data = { name, email };
-        fetch('http://localhost:3000/usuarios', {
+        fetch('https://projeto-wexer.onrender.com/usuarios', {
           method: 'POST',
           headers: { 
             'Accept': 'application/json,text/plain,*/*',
